<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="never|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/action_current_location"
        android:icon="@drawable/ic_action_place"
        android:title="@string/action_current_location"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_marker"
        android:icon="@drawable/ic_action_place"
        android:title="@string/action_marker"
        android:showAsAction="never" />
    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never" />
</menu>
