<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView"
        android:orderInCategory="1" />
    <item
        android:id="@+id/action_current_location"
        android:icon="@drawable/ic_action_location_found"
        android:title="@string/action_current_location"
        android:showAsAction="ifRoom"
        android:orderInCategory="2" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:showAsAction="never"
        android:orderInCategory="5" />
</menu>